--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -2,6 +2,7 @@
     "home": {
         "welcome": "Bienvenue sur cette appli de cuisine",
         "login": "Connexion",
+        "logoff": "Déconnexion",
         "register": "Inscription"
     }
 }
